; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_listener.c_evconnlistener_get_fd.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_listener.c_evconnlistener_get_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evconnlistener = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evconnlistener_get_fd(%struct.evconnlistener* %0) #0 {
  %2 = alloca %struct.evconnlistener*, align 8
  %3 = alloca i32, align 4
  store %struct.evconnlistener* %0, %struct.evconnlistener** %2, align 8
  %4 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %5 = call i32 @LOCK(%struct.evconnlistener* %4)
  %6 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %7 = getelementptr inbounds %struct.evconnlistener, %struct.evconnlistener* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = bitcast {}** %9 to i32 (%struct.evconnlistener*)**
  %11 = load i32 (%struct.evconnlistener*)*, i32 (%struct.evconnlistener*)** %10, align 8
  %12 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %13 = call i32 %11(%struct.evconnlistener* %12)
  store i32 %13, i32* %3, align 4
  %14 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %15 = call i32 @UNLOCK(%struct.evconnlistener* %14)
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @LOCK(%struct.evconnlistener*) #1

declare dso_local i32 @UNLOCK(%struct.evconnlistener*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
